Add Room annotation
